<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">searching for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No matching devices</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Search Device</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect to a device - secure</string>
    <string name="insecure_connect">Connect to a device - insecure</string>
    <string name="discoverable">Be Discoverable</string>

    <!-- Others -->
    <string name="current_location">Current Location</string>
    <string name="get_live_location">Get Live Location</string>
    <string name="stop">Stop</string>
    <string name="last_location">Last Location</string>
    <string name="my_location">Send Location</string>
    <string name="in_map">Map</string>


</resources>
